--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
+        body {
+            zoom: 2; /* Die gesamte Seite wird um den Faktor 2 vergrößert (doppelte Größe) */
+        }
         table.tableizer-table {
             font-size: 12px;
             border: 1px solid #CCC;
